# XLMate

./: docker-compose.yml  test_persistence.sh  test_redis_queue.sh
backend/: .env.example  Cargo.toml
backend/modules/: Cargo.toml
backend/modules/api/: Cargo.toml
backend/modules/api/src/: ai.rs  games.rs
backend/modules/chess/: Cargo.toml
backend/modules/chess/src/: pgn.rs
backend/modules/db/: Cargo.toml
backend/modules/db/entity/src/: game.rs
backend/modules/db/migrations/src/: lib.rs  m20250429_163843_create_games_table.rs  m20250604_160341_create_games_and_moves.rs  m20250605_090000_add_game_search_indexes.rs
backend/modules/dto/: Cargo.toml
backend/modules/dto/src/: games.rs  players.rs
backend/modules/error/src/: error.rs
backend/modules/matchmaking/: Cargo.toml  models.rs  redis.rs  routes.rs  service.rs
backend/modules/service/: Cargo.toml
backend/modules/service/src/: engine_service.rs  games.rs  lib.rs  players.rs
backend/modules/src/: main.rs
backend/src/: lib.rs
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  provider.tsx
frontend/components/: GameSidebar.tsx  SignInModal.tsx  WalletConnectModal.tsx
frontend/components/utils/: Provider.tsx
frontend/context/: walletContext.tsx
