[workspace]
resolver = "2"
members = [
    "modules/api",
    "modules/db",
    "modules/db/entity",
    "modules/db/migrations",
    "modules/dto",
    "modules/error",
    "modules/service",
    "modules/security",
    "modules/chess",
    "modules/challenge",
    "modules/tournament",
    "modules/matchmaking",
    "modules/engine",
]

[workspace.dependencies]
regex = "1.10.2"
utoipa = "4.2.0"
