[package]
name = "dto"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
utoipa = { workspace = true, features = ["uuid", "chrono"] }
validator = { version = "0.16", features = ["derive"] }
validator_types = "0.16"
regex.workspace = true
once_cell = "1.18.0"
chrono = { version = "0.4", features = ["serde"] }

uuid = { version = "1", features = ["v4", "serde"] }
db_entity = { path = "../db/entity" }
